# KULIMweb

./: README.md  main.py  pyproject.toml  requirements.txt
app/: api.py  embed.py  main.py
static/: embed.html  grammar_embed.html  index.html  pronunciation_embed.html  romanization_embed.html
