[project]
name = "kulimweb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "grammar @ https://github.com/jake1104/KULIM/releases/download/v0.1.1/grammar-0.1.1-cp310-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl",
    "hangul @ https://github.com/jake1104/KULIM/releases/download/v0.1.1/hangul-0.1.0-py3-none-any.whl",
    "pronunciation @ https://github.com/jake1104/KULIM/releases/download/v0.1.1/pronunciation-0.1.0-py3-none-any.whl",
    "romanization @ https://github.com/jake1104/KULIM/releases/download/v0.1.1/romanization-0.1.0-py3-none-any.whl",
    "kulim @ https://github.com/jake1104/KULIM/releases/download/v0.1.1/kulim-0.1.1-py3-none-any.whl",
    "uvicorn>=0.38.0",
]
